tests/baselines/reference/exportEqualCallable.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
exportEqualCallable_0.ts(4,10): error TS2454: Variable 'server' is used before being assigned.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== exportEqualCallable_1.ts (0 errors) ====
    ///<reference path='exportEqualCallable_0.ts'/>
    import connect = require('exportEqualCallable_0');
    connect();
    
==== exportEqualCallable_0.ts (1 errors) ====
    var server: {
        (): any;
    };
    export = server;
             ~~~~~~
!!! error TS2454: Variable 'server' is used before being assigned.
    